--- a/index.html
+++ b/index.html
@@ -209,17 +209,11 @@ body {font-size:16px;}
     <h3>See how easy it is to use AuditBull:​</h3>
     
     <ul>
-      <li>Administer and track <b>Access Reviews</b></li>​
-      <li><b>Simple user response </b> which requires <b>no training</b></li>​
+      <li>Administer and track <b>Access Reviews</b></li>
+      <li><b>Simple user response </b> which requires <b>no training</b></li>
       <li>Feel the power of <b>Human In The Loop </b> (HITL) automation</li>
     </ul>
-
-    <ul>
-      <li><b>BETTER Outcomes</b> through elimination of financial waste</li>
-      <li><b>FASTER Execution</b> through ChatBot automation and elimination of manual processes</li>
-      <li><b>Achieve</b> compliance targets <b>SOONER</b> with pre-built Trust processes</li>
-    </ul>
-
+    
     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/649266744?h=7971f9a0a1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Auditbull Demo - Video 1.mov"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   </div>
 
@@ -246,17 +240,18 @@ body {font-size:16px;}
     <div class="spacer">
       &nbsp;
     </div>
-    <!-- Calendly link widget begin -->
-    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-    <div class="flex-wrapper"><button class="button-56" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/alexander-feng-magnataur/auditbull-launch-senor-frogs'});return false;"><h4>Click here to join us at our AWS Re:Invent Launch Party 11/30/21 at Senor Frogs in Las Vegas!</h4></button></div>
-    <!-- Calendly link widget end -->
+  
   </div>
 
   <!-- Referral -->
   <div class="w3-container" id="referral" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>Referral</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
+    <!-- Calendly link widget begin -->
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+    <div class="flex-wrapper"><button class="button-56" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/alexander-feng-magnataur/auditbull-launch-senor-frogs'});return false;"><h4>Click here to join us at our AWS Re:Invent Launch Party 11/30/21 at Senor Frogs in Las Vegas!</h4></button></div>
+    <!-- Calendly link widget end -->
     <a name="form595930589" id="formAnchor595930589"></a>
     <script src="https://fs25.formsite.com/include/form/embedManager.js?595930589"></script>
     <script type="text/javascript">
