--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ body {font-size:16px;}
     </ul>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
-        <ol class="carousel-indicators">
+        <ol class="carousel-indicators" style="padding-top: 20px;">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
@@ -213,7 +213,7 @@ body {font-size:16px;}
       <li><b>Simple user response </b> which requires <b>no training</b></li>
       <li>Feel the power of <b>Human In The Loop </b> (HITL) automation</li>
     </ul>
-    
+
     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/649266744?h=7971f9a0a1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Auditbull Demo - Video 1.mov"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   </div>
 
@@ -227,7 +227,7 @@ body {font-size:16px;}
     <div class="spacer">
       &nbsp;
     </div>
-    <h3>1. Schedule a demo with us</h3>
+    <div class="flex-wrapper"></div><h3>1. Schedule a demo with us</h3></div>
     <!-- Calendly inline widget begin -->
     <div class="calendly-inline-widget" data-url="https://calendly.com/alexander-feng-magnataur/auditbull-proof-of-value?hide_event_type_details=1?hide_landing_page_details=1" style="min-width:320px;height:666px;"></div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
@@ -235,7 +235,7 @@ body {font-size:16px;}
     <div class="spacer">
       &nbsp;
     </div>
-    <h3>2. Join our public Slack channel and experience AuditBull on your device</h3>
+    <div class="flex-wrapper"></div><h3>2. Join our public Slack channel</h3></div>
     <div class="flex-wrapper"><button class="button-56" onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h2 style="margin-bottom: 15px;">Join us on</h2><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>  
     <div class="spacer">
       &nbsp;
@@ -252,7 +252,14 @@ body {font-size:16px;}
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
     <div class="flex-wrapper"><button class="button-56" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/alexander-feng-magnataur/auditbull-launch-senor-frogs'});return false;"><h4>Click here to join us at our AWS Re:Invent Launch Party 11/30/21 at Senor Frogs in Las Vegas!</h4></button></div>
     <!-- Calendly link widget end -->
-    <a name="form595930589" id="formAnchor595930589"></a>
+    <p>At AuditBull, <b>we deliver for our stakeholders</b><br>​
+      As a boot-strapped start up that has our roots in consulting, our <b>brand is customer success</b>. ​<br>
+      We’ve <b>grown through referral </b> to get here and are excited to continue to do so by offering <b>opportunity</b> and <b>incentive</b> for our supporters to make an impact not only for us, but also for the <b>causes they care about</b>.​<br></p>
+      <div class="flex-wrapper">
+        <div><img src="logos\giving_card.png" alt="Giving Card"></div>
+        <div><h3>Let’s build <b>Momentum That Matters</b></h3></div>
+      </div>
+      <a name="form595930589" id="formAnchor595930589"></a>
     <script src="https://fs25.formsite.com/include/form/embedManager.js?595930589"></script>
     <script type="text/javascript">
       EmbedManager.embed({
@@ -266,7 +273,7 @@ body {font-size:16px;}
   <div class="w3-container" id="about" style="margin-top:75px">
     <h1 class="w3-xxxlarge mag-lightblue-text"><b>About</b></h1>
     <hr style="width:50px;border:5px solid #005AFF" class="w3-round">
-    <p>AuditBull is a member of a new class of <b>business process solutions </b> known as ChatOps.​<br><br>
+    <p>AuditBull was started by Magnataur, a cybersecurity and compliance consulting firm that serves regulated B2B and B2B2C platform companies. AuditBull is a member of a new class of <b>business process solutions </b> known as ChatOps.​ <br><br>
       ChatOps delivers a 10x improvement in <b>organizational communication </b> and <b>process visibility</b> in the same way that DevOps has for infrastructure delivery​<br><br>
       AuditBull leverages this new business paradigm which leverages tools that your <b>teams are already familiar </b> with to make execution of the cybersecurity and compliance obligations as <b>simple, straightforward, and impactful </b> as possible​<br><br>
       Customer Trust – As your partner in delivering Trust Services at your organization, we look forward to discussing our own security program while we progress towards obtaining our SOC2 attestation in 2022</p>
