--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ body {font-size:16px;}
     <div class="spacer">
       &nbsp;
     </div>
-    <div class="flex-wrapper"></div><h3>1. Schedule a demo with us</h3></div>
+    <div class="flex-wrapper"><h3>1. Schedule a demo with us</h3></div>
     <!-- Calendly inline widget begin -->
     <div class="calendly-inline-widget" data-url="https://calendly.com/alexander-feng-magnataur/auditbull-proof-of-value?hide_event_type_details=1?hide_landing_page_details=1" style="min-width:320px;height:666px;"></div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
@@ -235,7 +235,7 @@ body {font-size:16px;}
     <div class="spacer">
       &nbsp;
     </div>
-    <div class="flex-wrapper"></div><h3>2. Join our public Slack channel</h3></div>
+    <div class="flex-wrapper"><h3>2. Join our public Slack channel</h3></div>
     <div class="flex-wrapper"><button class="button-56" onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h2 style="margin-bottom: 15px;">Join us on</h2><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>  
     <div class="spacer">
       &nbsp;
@@ -256,9 +256,9 @@ body {font-size:16px;}
       As a boot-strapped start up that has our roots in consulting, our <b>brand is customer success</b>. ​<br>
       We’ve <b>grown through referral </b> to get here and are excited to continue to do so by offering <b>opportunity</b> and <b>incentive</b> for our supporters to make an impact not only for us, but also for the <b>causes they care about</b>.​<br></p>
       <div class="flex-wrapper">
-        <div><img src="logos\giving_card.png" alt="Giving Card"></div>
-        <div><h3>Let’s build <b>Momentum That Matters</b></h3></div>
+        <img src="logos\giving_card.png" style="width: 66%;" alt="Giving Card">
       </div>
+      <div class="flex-wrapper"><h3>Let’s build <b>Momentum That Matters</b></h3></div>
       <a name="form595930589" id="formAnchor595930589"></a>
     <script src="https://fs25.formsite.com/include/form/embedManager.js?595930589"></script>
     <script type="text/javascript">
