--- a/index.html
+++ b/index.html
@@ -227,7 +227,19 @@ body {font-size:16px;}
     <div class="spacer">
       &nbsp;
     </div>
-    <div class="flex-wrapper"><h3>1. Schedule a demo with us</h3></div>
+    <div class="flex-wrapper">
+      <h3>1. Schedule a demo with us</h3><br>
+      <h5>We will review AuditBull's:<br>
+        <ul>
+          <li>Capabilities</li>
+          <li>Client Results</li>
+          <li>Proof of Value Structure</li>
+          <li>Next Steps</li>
+        </ul>
+          
+      </h5>
+    </div>
+    
     <!-- Calendly inline widget begin -->
     <div class="calendly-inline-widget" data-url="https://calendly.com/alexander-feng-magnataur/auditbull-proof-of-value?hide_event_type_details=1?hide_landing_page_details=1" style="min-width:320px;height:666px;"></div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
