--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ body {font-size:16px;}
       &nbsp;
     </div>
     <div class="flex-wrapper">
-      <h3>1. Schedule a demo with us</h3>
+      <h3>1. Schedule a demo with us</h3></div>
       
       <div class="flex-wrapper"><h5>We will review AuditBull's:<br>
         <ul>
