remove banner logo

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body {font-size:16px;}
 <!-- Top menu on small screens -->
 <header class="w3-container mag-lightblue-bg w3-top w3-hide-large w3-xlarge w3-padding">
   <a href="javascript:void(0)" class="w3-button w3-margin-right" onclick="w3_open()">☰</a>
-  <span><img src="logos\AuditBull White Horizontal Logo.svg" style="max-width:55%;margin-left:auto;margin-right:auto;" alt="AuditBull Logo"></span>
+  <span></span>
 </header>
 
 <div class="w3-hide-large spacer">
