--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ body {font-size:16px;}
     </ul>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
-        <ol class="carousel-indicators" style="bottom: -40px;background-color: #083362;">
+        <ol class="carousel-indicators" style="bottom: -5px">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
