--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@ body {font-size:16px;}
     </div>
     <div class="flex-wrapper"><h3>2. Join our public Slack channel</h3></div>
     <div class="flex-wrapper"><button class="button-56" onclick="location.href='https://join.slack.com/t/auditbull/shared_invite/zt-z7e47fed-dfDHbDYAicHgOQGUBvXd~w'"><h2 style="margin-bottom: 15px;">Join us on</h2><img src="logos\slack_trans.png" style="width: 150px;" alt="Slack"></button></div>  
+    <div class="flex-wrapper"><h3>Coming soon to</h3><img src="logos\microsoft-teams-logo-2.png" style="width: 150px;" alt="Microsoft Teams"></div>
     <div class="spacer">
       &nbsp;
     </div>
