--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ body {font-size:16px;}
     <div class="spacer">
       &nbsp;
     </div>
-    <div class="flex-wrapper"><h5>Coming soon to </h5><img src="logos\microsoft-teams-logo-2.png" style="width: 150px;" alt="Microsoft Teams"></div>
+    <div class="flex-wrapper"><h4>Coming soon to &nbsp;</h4><img src="logos\microsoft-teams-logo-2.png" style="width: 150px;" alt="Microsoft Teams"></div>
     <div class="spacer">
       &nbsp;
     </div>
